Update CDNs section

--- a/docs/installation/(root)/cdn/content.mdx
+++ b/docs/installation/(root)/cdn/content.mdx
@@ -1,4 +1,4 @@
-Copy and paste [CDNs](#other-cdns) to instantly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser out of the box.
+Copy and paste [CDNs](/docs/installation#cdns) to instantly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser out of the box.
 
 <StepSection className="mt:50">
     <Step>
@@ -9,13 +9,6 @@ Copy and paste [CDNs](#other-cdns) to instantly launch the [runtime engine](/doc
         <HelloWorld />
     </Step>
 </StepSection>
-
-import cdns from 'shared/data/cdns'
-
-## Other CDNs
-<IconButtons url="/docs/installation">
-    {cdns}
-</IconButtons>
 
 ---
 
