--- a/docs/installation/(root)/content.mdx
+++ b/docs/installation/(root)/content.mdx
@@ -1,6 +1,7 @@
 import frameworks from 'shared/data/frameworks'
 import buildTools from 'shared/data/build-tools'
 import migrations from 'shared/data/migrations'
+import cdns from 'shared/data/cdns'
 
 Installation guides for popular frameworks and build tools integrated with [rendering modes](/docs/rendering-modes) of Master CSS, as well as migration guides.
 
@@ -12,6 +13,11 @@ Installation guides for popular frameworks and build tools integrated with [rend
 ## Build tools
 <IconButtons url="/docs/installation">
     {buildTools}
+</IconButtons>
+
+## CDNs
+<IconButtons url="/docs/installation">
+    {cdns}
 </IconButtons>
 
 ## Migrations
