--- a/docs/code-linting/content.mdx
+++ b/docs/code-linting/content.mdx
@@ -1,7 +1,5 @@
 import { IconStatusChange, IconTextSpellcheck, IconArrowMerge, IconShieldCheck, IconPencilOff } from '@tabler/icons-react'
 import Features, { Feature } from 'shared/components/Features'
-import frameworks from 'shared/data/frameworks'
-import editors from 'shared/data/editors'
 
 <Features className="grid-cols:3@sm my:50">
     <Feature>
@@ -17,15 +15,7 @@ import editors from 'shared/data/editors'
         <div>
             **[Syntax error checks](#syntax-error-checks)**
 
-            Check the validity of classes with your configuration
-        </div>
-    </Feature>
-    <Feature>
-        <IconPencilOff className="app-icon-primary" />
-        <div>
-            **[No traditional class](#no-traditional-class)**
-
-            Avoid using custom classes from traditional CSS
+            Early detection of syntax errors based on generated CSS
         </div>
     </Feature>
     <Feature>
@@ -36,29 +26,22 @@ import editors from 'shared/data/editors'
             Avoid declaring the identical CSS property repeatedly
         </div>
     </Feature>
-    <Feature>
-        <IconArrowMerge className="app-icon" />
-        <div>
-            **Enforce shorthand 🚧**
-
-            Combine multiple classes into a shorthand If possible
-        </div>
-    </Feature>
 </Features>
 
-See more feature [details ↓](#features)
-
 ---
+
+import frameworks from 'shared/data/frameworks'
+import languages from 'shared/data/languages'
+import editors from 'shared/data/editors'
 
 ## Installation guides
 <IconButtons url="/docs/code-linting">
     {[
-        ...frameworks.filter(({ name }) => ['React', 'Vue.js', 'Angular', 'Svelte'].includes(name)),
+        ...frameworks.filter(({ name }) => ['React', 'Vue.js', 'Angular', 'Svelte', 'Laravel'].includes(name)),
+        ...languages.filter(({ name }) => ['HTML'].includes(name)),
         ...editors.filter(({ name }) => ['Visual Studio Code'].includes(name)),
     ]}
 </IconButtons>
-
-<p><small>If you use `.html` or a related framework, please see the Angular guide.</small></p>
 
 ---
 
@@ -85,9 +68,7 @@ block round bg:blue:hover font:12 font:24@sm font:32@md m:32 mb:48 px:16
 ```
 
 ### Syntax error checks
-### No traditional class
 ### Conflicting class checks 🚧
-### Enforce shorthand 🚧
 
 ---
 
@@ -97,4 +78,3 @@ block round bg:blue:hover font:12 font:24@sm font:32@md m:32 mb:48 px:16
 | `class-order`           | Enforce a consistent and logical order of classes         |
 | `class-validation`      | Check the validity of classes with your configuration     |
 | `class-collision` 🚧    | Avoid declaring the identical CSS property repeatedly     |
-| `enforces-class-shorthand` 🚧 | Combine multiple classes into a shorthand if possible |
