--- a/docs/code-linting/svelte/content.mdx
+++ b/docs/code-linting/svelte/content.mdx
@@ -51,7 +51,7 @@
     <Step>
         ### <StepNum />Start linting your code
         ```bash
-        npx eslint
+        npx eslint *.svelte
         ```
     </Step>
 </StepSection>
