--- a/docs/code-linting/vuejs/content.mdx
+++ b/docs/code-linting/vuejs/content.mdx
@@ -34,7 +34,7 @@
     <Step>
         ### <StepNum />Start linting your code
         ```bash
-        npx eslint
+        npx eslint *.vue
         ```
     </Step>
 </StepSection>
