--- a/docs/colors/components/Overview.mdx
+++ b/docs/colors/components/Overview.mdx
@@ -11,7 +11,7 @@ export default {
     }
 }
 ```
-Use them in HTML and with dark mode:
+Apply your custom colors with dark mode:
 ```html
 <html class="**dark**">
     <body>
