--- a/docs/fonts/content.mdx
+++ b/docs/fonts/content.mdx
@@ -17,6 +17,8 @@
 </Demo>
 The default provides three neutral [font family](/docs/font-family) variables, `sans`, `serif`, and `mono`, to facilitate your use as fallbacks when adding custom fonts.
 
+The `variables.fontFamily` inherits from both `font-family` and `font`, so you can quickly apply it, such as `mcss font:sans`.
+
 ### Add custom fonts
 Define [variables](/docs/variables) to use font tokens from a single source. For example, add `Inter` as the general font and `Fira Code` as the code font.
 ```js name=master.css.js
