--- a/docs/functions/components/Overview.mdx
+++ b/docs/functions/components/Overview.mdx
@@ -5,7 +5,7 @@ export default {
     }
 }
 ```
-Use them in HTML:
+Apply your custom functions:
 ```html
 - <div class="translate(2rem)">…</div>
 + <div class="translate(32)">…</div>
