--- a/docs/installation/(root)/content.mdx
+++ b/docs/installation/(root)/content.mdx
@@ -1,9 +1,8 @@
 import frameworks from 'shared/data/frameworks'
 import buildTools from 'shared/data/build-tools'
-import migrations from 'shared/data/migrations'
 import cdns from 'shared/data/cdns'
 
-Installation guides for popular frameworks and build tools integrated with [rendering modes](/docs/rendering-modes) of Master CSS, as well as migration guides.
+Installation guides for popular frameworks and build tools integrated with [rendering modes](/docs/rendering-modes) of Master CSS.
 
 ## Web frameworks
 <IconButtons url="/docs/installation">
@@ -18,11 +17,6 @@ Installation guides for popular frameworks and build tools integrated with [rend
 ## CDNs
 <IconButtons url="/docs/installation">
     {cdns}
-</IconButtons>
-
-## Migrations
-<IconButtons url="/docs/installation">
-    {migrations}
 </IconButtons>
 
 ---
