--- a/docs/media-queries/components/Overview.mdx
+++ b/docs/media-queries/components/Overview.mdx
@@ -8,7 +8,7 @@ export default {
     }
 }
 ```
-Use them in HTML:
+Apply your custom media queries:
 ```html
 <div class="font:24**@mobile** font:36**@table** font:48**@desktop** text:center**@watch**"></div>
 ```
