--- a/docs/semantics/components/Overview.mdx
+++ b/docs/semantics/components/Overview.mdx
@@ -10,7 +10,7 @@ export default {
     }
 }
 ```
-Use them in HTML:
+Apply your custom semantics:
 ```html
 <div class="**show** **hide-text**" hidden></div>
 ```
