--- a/docs/styles/components/Overview.mdx
+++ b/docs/styles/components/Overview.mdx
@@ -9,7 +9,7 @@ export default {
     }
 }
 ```
-Use them in HTML:
+Apply your custom styles:
 ```html
 <div class="card">
     <img class="card-header" src="…" />
