--- a/docs/variables/content.mdx
+++ b/docs/variables/content.mdx
@@ -1,12 +1,14 @@
 ## Overview [sr-only]
 <Overview />
 
+Master CSS provides useful variable groups for various inheritance behaviors such as [colors](/docs/colors), [spacings](/docs/spacings), [fonts](/docs/fonts), and [sections](/docs/sections) by default. You can start implementing your design tokens from these topics.
+
+This guide primarily explains the functionality of variables.
+
 ---
 
 ## Basic usage
-🚧
-
----
-
-## Customization
-🚧
+### Add a variable
+### Add rule-specific variables
+### Add a variable alias
+### Group variables
