--- a/docs/code-linting/react/content.mdx
+++ b/docs/code-linting/react/content.mdx
@@ -34,7 +34,7 @@
     <Step>
         ### <StepNum />Start linting your code
         ```bash
-        npx eslint
+        npx eslint *.{ts,tsx,js}
         ```
     </Step>
 </StepSection>
