--- a/roadmap/content.mdx
+++ b/roadmap/content.mdx
@@ -30,7 +30,7 @@ Finalizing these documents allows us to verify the rationality, ease of use, and
     <Documents category='Production Optimization' />
     <Documents category='Customization' />
     <Documents category='Enhanced Service' />
-    <Documents category='JavaScript API' />
+    <Documents category='API Reference' />
 </table>
 <p className="flex gap:10 text:12">
     <b>🟢 Completed</b>
