--- a/docs/code-linting/content.mdx
+++ b/docs/code-linting/content.mdx
@@ -37,9 +37,9 @@ import Features, { Feature } from 'shared/components/Features'
     <Feature>
         <IconFunction className="app-icon-primary" />
         <div>
-            **[Supports CSS-in-JS](#supports-css-in-js)**
+            **[Supports JS utilities](#supports-js-utilities)**
 
-            Avoid declaring the identical CSS property repeatedly
+            Check the classes in popular utility arguments
         </div>
     </Feature>
 </Features>
@@ -115,4 +115,7 @@ export default {
 ### Conflicting class checks 🚧
 Soon...
 
-### Supports CSS-in-JS
+### Supports JS utilities
+<video className="aspect:2/1 r:5 max-w:xs" autoPlay loop muted playsInline>
+    <source src="/videos/supports-js-utilities.webm" type="video/webm" />
+</video>
