--- a/docs/eslint/content.mdx
+++ b/docs/eslint/content.mdx
@@ -1,4 +1,5 @@
 import defaultConfigurationScript from '../../packages/eslint-config/index.js?text'
+import defaultSettings from '../../packages/eslint-plugin/lib/settings.js?text'
 
 ## Usage [sr-only]
 
@@ -44,3 +45,10 @@ Set `disallowTraditionalClass: true` to disallow using traditional classes:
     }
 }
 ```
+
+---
+
+## Settings
+<Code lang="js">
+    {defaultSettings}
+</Code>
