--- a/docs/eslint/content.mdx
+++ b/docs/eslint/content.mdx
@@ -35,12 +35,12 @@ Detect syntax errors early when writing classes.
     }
 }
 ```
-Set `disallowTraditionalClass: true` to disallow using traditional classes:
+Set `disallowUnknowClass: true` to disallow using traditional classes:
 ```json name=.eslintrc.json
 {
     "rules": {
         "@master/css/class-validation": ["error", {
-            "disallowTraditionalClass": true
+            "disallowUnknowClass": true
         }]
     }
 }
