--- a/docs/code-linting/content.mdx
+++ b/docs/code-linting/content.mdx
@@ -173,3 +173,4 @@ const H1 = styled.h1`text-align:cente`
 
 export default () => <H1>Hello World</H1>
 ```
+Common JavaScript utility names are supported by [default](/docs/eslint#calleematching).
