--- a/docs/code-linting/react/content.mdx
+++ b/docs/code-linting/react/content.mdx
@@ -21,6 +21,11 @@
             ```json name=.eslintrc.json
             {
                 "extends": ["@master/css"],
+                "parserOptions": {
+                    "ecmaFeatures": {
+                        "jsx": true
+                    }
+                },
                 "overrides": [
                     {
                         "files": ["*.ts", "*.tsx", "*.js"],
