--- a/site/app/[locale]/(root)/docs/installation/angular/content.mdx
+++ b/site/app/[locale]/(root)/docs/installation/angular/content.mdx
@@ -20,14 +20,14 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
             ```bash name=Terminal
             npx degit master-co/css/examples/angular-with-progressive-rendering __my-project__
             cd __my-project__
-            npm install @master/css@beta
+            npm install @master/css@beta @master/css-server@beta
             npm install
             npm run dev
             ```
         </StepR>
         <StepEnd/>
     </Step>
-</StepSection> 
+</StepSection>
 
 ---
 
@@ -49,11 +49,11 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
     <Step $row>
         <StepL>
             ### <StepNum />Install Master CSS
-            Install Master CSS into your project via package managers.
+            Install Master CSS Server into your project via package managers.
         </StepL>
         <StepR>
             ```install
-            **@master/css@beta**
+            **@master/css@beta** **@master/css-server@beta**
             ```
         </StepR>
     </Step>
@@ -72,7 +72,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
         <StepL>
             ### <StepNum />Set up CSS runtime engine
             Initialize the runtime engine with your configuration.
-            
+
             (!) There is currently no solution for lazy loading runtime engine in Angular. Wait for Angular to officially release a major version based on Vite.
         </StepL>
         <StepR>
@@ -83,7 +83,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
             +import config from '../master.css';
 
             +initRuntime(config);
-            
+
             platformBrowserDynamic().bootstrapModule(AppModule)
                 .catch(err => console.error(err));
             ```
@@ -107,7 +107,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
         </StepL>
         <StepR>
             ```ts name=server.ts
-            +import { renderHTML } from '@master/css';
+            +import { render } from '@master/css-server';
             +import config from './master.css';
             …
             export function app() {
@@ -119,7 +119,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
             +            (error: Error, html: string) => {
             +                error
             +                    ? console.error(error)
-            +                    : res.send(renderHTML(html, config))
+            +                    : res.send(render(html, config).html)
             +            }
             +        )
             +    });
