--- a/site/app/[locale]/(root)/docs/colors/components/Overview.mdx
+++ b/site/app/[locale]/(root)/docs/colors/components/Overview.mdx
@@ -1,6 +1,6 @@
 ```js name=master.css.js
 export default {
-    colors: {
+    variables: {
         primary: '#ff0000 #dca000@light #fbe09d@dark',
         tiffany: '#0abab5',
         purple: {
