--- a/site/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
+++ b/site/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
@@ -18,7 +18,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             <script type="module">
         +        import { initRuntime } from 'https://esm.sh/@master/css@beta'
                 initRuntime({
-                    colors: {
+                    variables: {
                         primary: '#000000'
                     }
                 })
