Docs: Update **font-family** documentation

--- a/website/app/[locale]/(root)/docs/variables/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/variables/components/Overview.mdx
@@ -3,7 +3,11 @@ import { variables } from '@master/css'
 
 export default {
     variables: {
-        fontFamily: { sans: 'Inter' },
+        font: {
+            family: {
+                sans: 'Inter'
+            }
+         },
         section: { md: 1024 },
         spacing: { x1: 2 },
         primary: '#000000'
