--- a/website/app/[locale]/(root)/docs/fonts/content.mdx
+++ b/website/app/[locale]/(root)/docs/fonts/content.mdx
@@ -17,7 +17,7 @@
 </Demo>
 The default provides three neutral [font family](/docs/font-family) variables, `sans`, `serif`, and `mono`, to facilitate your use as fallbacks when adding custom fonts.
 
-The `variables.fontFamily` inherits from both `font-family` and `font`, so you can quickly apply it, such as `mcss font:sans`.
+The `variables.font.family` inherits from both `font-family` and `font`, so you can quickly apply it, such as `mcss font:sans`.
 
 ### Add custom fonts
 Define [variables](/docs/variables) to use font tokens from a single source. For example, add `Inter` as the general font and `Fira Code` as the code font.
@@ -26,9 +26,11 @@ import { variables } from '@master/css'
 
 export default {
     variables: {
-+        fontFamily: {
-+            sans: ['Inter', ...variables.fontFamily.sans],
-+            mono: ['Fira Code', ...variables.fontFamily.mono]
++        font: {
++            family: {
++               sans: ['Inter', ...variables.font.family.sans],
++               mono: ['Fira Code', ...variables.font.family.mono]
++            }
 +        }
     }
 }
